--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -14,7 +14,7 @@ input{
     border-right:.5px solid #efefef;
     height: 100vh;
 }
-.row{
+.myrow{
     display: flex;
     flex-wrap: wrap;
 }
@@ -252,7 +252,7 @@ input{
     border: 1px solid silver !important;
     outline: none;
 }
-.anketaCnt button{
+button{
     cursor: pointer;
 }
 .anketaCnt .date input:nth-child(2){
@@ -261,7 +261,7 @@ input{
 .anketaCnt .date>*{
     margin-right:5px;
 }
-.anketaCnt button{
+button{
     padding: 5px 13px;
     border: 1px solid #cbe4f5;
     outline:none !important;
@@ -269,7 +269,7 @@ input{
 .anketaCnt input{
     padding: 5px 10px;
 }
-.anketaCnt select{
+select{
     border:1px solid silver;
     padding: 5px 10px;
     outline:none;
@@ -287,4 +287,123 @@ input{
 }
 .mb-20{
     margin-bottom:15px;
+}
+.mb-10{
+    margin-bottom:10px;
+}
+.thedrop .attrs{
+    margin-bottom:10px;
+}
+.thedrop .attrs span:nth-child(1){
+    font-family: sans-serif;
+    font-size: 15px;
+    margin-right: 10px;
+}
+.thedrop .attrs span:nth-child(2){
+    font-weight: 600;
+    font-size: 16px;
+}
+.ml--10{
+    margin-left:-10px;
+}
+.bordered-table{
+    width:100%;
+    border-collapse: collapse;
+}
+.bordered-table th{
+    font-size:15px;
+    font-weight: 400;
+}
+.bordered-table td,.bordered-table th{
+    padding:5px 10px;
+}
+.cursor-pointer{
+    cursor: pointer;
+}
+.carInfo ul{
+    list-style: none;
+    padding-left:5px;
+}
+.transportTable .closed{
+    background-color: white;
+}
+.transportTable .closed+tr>td{
+    padding:0 10px;
+    border-bottom:0;
+}
+.transportTable .open+tr>td{
+    padding:5px 10px;
+}
+.transportTable .closed img{
+    transform: rotateZ(0deg);
+    transition: .4s;
+}
+.transportTable .open img{
+    transform: rotateZ(45deg);
+    transition: .4s;
+}
+.transportTable .closed+tr>td>div{
+    height: 0;
+    transition: .5s;
+    overflow: hidden;
+}
+.transportTable .open+tr>td>div{
+    height: auto;
+    transition: .5s;
+}
+.transportTable ul{
+    list-style: none;
+}
+.v-center{
+    display: flex;
+    align-items: center;
+}
+.editBtnCnt {
+    display: flex;
+    justify-content: flex-end;
+}
+.editBtnCnt button{
+    height: 20px;
+    width:20px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 20px;
+}
+.v-center-right{
+    text-align: right;
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+}
+.passport>*:nth-child(1){
+    width:50px;
+    margin-right: 10px;
+}
+.voditel select{
+    border:1px solid silver;
+    padding: 5px 10px;
+    outline:none;
+    min-width:200px;
+}
+.sparse>*{
+    margin-right:10px;
+}
+.transh{
+    border:1px solid #efefef;
+    padding:5px 10px;
+    padding-top:0px;
+}
+.transh h4{
+    background-color: #efefef;
+    font-weight: 400;
+    padding:10px 5px;
+    margin:0  -10px;
+    margin-bottom:20px;
+}
+.transh-table{
+    width:100%;
+    border-collapse: collapse;
+    margin-top:20px;
+    border:1px solid black;
 }
