--- a/src/assets/dogovor.css
+++ b/src/assets/dogovor.css
@@ -349,4 +349,32 @@
     display: inline-block;
     margin-bottom: 15px;
 }
+.polis-main table {
+    border-collapse: collapse;
+    width: 100%;
+    max-width: 100%;
+}
+
+
+.polis-main table th {
+    padding-top: 12px;
+    padding-bottom: 12px;
+    text-align: left;
+    background-color: #fff;
+    color: #000;
+}
+
+.polis-main table td,
+.polis-main table th {
+    border: 1px solid #fff;
+    padding: 8px;
+}
+
+.polis-main table tr:nth-child(even) {
+    background-color: #f2f2f2;
+}
+
+.polis-main table tr:hover {
+    background-color: #ddd;
+}
 /*** Polis Form Styles */
