--- a/src/assets/style.css
+++ b/src/assets/style.css
@@ -537,3 +537,9 @@ select{
     margin-top:20px;
     margin-bottom:20px;
 }
+.bg-green{
+    background-color: forestgreen;
+}
+.p-0{
+    padding:0;
+}
